--- a/src/components/Location.astro
+++ b/src/components/Location.astro
@@ -37,7 +37,7 @@ const t = translations.location;
     <!-- Map -->
     <div class="location__map-wrapper">
       <img
-        src="/images/location-map.jpg"
+        src="/images/location-map.webp"
         alt={t.mapAlt}
         class="location__map-image"
         loading="lazy"
