--- a/src/components/Characteristics.astro
+++ b/src/components/Characteristics.astro
@@ -28,7 +28,7 @@ const features = [
 
   <div class="characteristics__content">
     <div class="characteristics__header">
-      <h2 class="characteristics__title">{t.title}</h2>
+      <h2 class="characteristics__title" data-text-reveal="words">{t.title}</h2>
 
       <ul class="characteristics__features">
         {
