--- a/src/components/VideoModal.astro
+++ b/src/components/VideoModal.astro
@@ -1,7 +1,7 @@
 ---
 const {
   vimeoId = "1019191082",
-  placeholderSrc = "/images/video-placeholder.webp",
+  placeholderSrc = "/images/hero.webp",
   placeholderAlt = "Video thumbnail"
 } = Astro.props;
 ---
