--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const { lang = 'es' } = Astro.props;
   <div class="footer__container">
     <img
       src="/images/header-logo.svg"
-      alt="Calablanca Residences"
+      alt="Cala Blanca Residences"
       class="footer__logo"
     />
 
