--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ const t = useTranslations(lang);
 
 <section class="hero" data-hero>
   <div class="hero__background">
-    <img src={image} alt="Calablanca Residences" />
+    <img src={image} alt="Cala Blanca Residences" />
   </div>
 
   <div class="hero__content container">
